Fix find bugs problems. Add dice utility to get random element from array or list. Add Damage builder for easy construction of damage arrays.